--- a/test/index.html
+++ b/test/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <title>Minima tests</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/necolas/normalize.css/normalize.min.css">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="css/meta.css">
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/typography.css">
         <link rel="stylesheet" href="css/table.css">
